default/openspeedtest/deploy.yaml
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.14.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: default
  labels:
    app: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: docker.io/openspeedtest/latest
          ports:
            - containerPort: 3000
      readinessProbe:
        httpGet:
          path: /
          port: 3000
        initialDelaySeconds: 5
        periodSeconds: 5
      livenessProbe:
        httpGet:
          path: /
          port: 3000
        initialDelaySeconds: 5
        periodSeconds: 5
