default/openspeedtest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: default
  labels:
    app: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
