default/openspeedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openspeedtest
  namespace: default
  labels:
    app: openspeedtest
spec:
  rules:
    - host: speedtest.homes
      http:
        paths:
          - backend:
              service:
                name: openspeedtest
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: speedtest.vpn
      http:
        paths:
          - backend:
              service:
                name: openspeedtest
                port:
                  number: 80
            path: /
            pathType: Prefix
